fix tick stream; make streaming tick boxes draggable to show multi simultaneous streams

--- a/css/wstrade.css
+++ b/css/wstrade.css
@@ -47,3 +47,6 @@ input#token             { width: 140px }
 div#rangeslider         { width: 200px }
 #slider1, #slider2      { margin-top: 12px }
 
+h2.livesym              { margin-top: 1px }
+.ui-livesym-ttip        { max-width: 220px }
+.babybox                { border: 1px outset; padding: 2px }
